Fixes spacing after state profile intro. Changes default paragraph size to large

--- a/_sass/blocks/jekyll-layouts/_state-pages.scss
+++ b/_sass/blocks/jekyll-layouts/_state-pages.scss
@@ -16,6 +16,10 @@
     border-bottom: 20px solid $light-green;
     padding-bottom: $standard-padding-lite;
   }
+  
+  h2 + p {
+    @include heading('para-lg');
+  }
 
   h3:not(.chart-title):not(.state-page-nav-title),
   h4:not(.chart-title):not(.state-page-nav-title):not(.details-container) {
@@ -53,11 +57,11 @@
   }
 
   p {
-    @include heading('para-md');
+    @include heading('para-lg');
   }
 
   ul {
-    @include heading('para-md');
+    @include heading('para-lg');
   }
 
   figure {
